5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1807_2564.log
== TEST (2019-06-12 22:46:51) 
-- CODE:
from numpy import *

pro = array(eval(input("gols pro :")))
contra = array(eval(input("gols contra :")))
v=0
d=0
e=0
for i in pro:
for j in contra:
zeros(3,dtype=int)
if(pro[i]==contra[j]):
	e=e+1

-- ERROR:
File "XXXX", line 9
    for j in contra:
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:06:40) 
-- CODE:
from numpy import *

pro = array(eval(input("gols pro :")))
contra = array(eval(input("gols contra:")
zeros(3,dtype=int)
for i in range(0,size(pro)):
    if(pro[i]>contra[i]):
       zeros[0]=zeros[0]+1
    if(pro[i]==contra[i]):
       zeros[1]=zeros[1]+1
    if(pro[i]<contra[i]):
       zeros[2]=zers[2]+1
print(zeros)
-- ERROR:
File "XXXX", line 5
    zeros(3,dtype=int)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:07:52) 
-- CODE:
from numpy import *

pro = array(eval(input("gols pro :")))
contra = array(eval(input("gols contra:")
vc = zeros(,dtype=int)
for i in range(0,size(pro)):
    if(pro[i]>contra[i]):
       vc[0]=vc[0]+1
    if(pro[i]==contra[i]):
       vc[1]=vc[1]+1
    if(pro[i]<contra[i]):
       vc[2]=vc[2]+1
print(zeros)
-- ERROR:
File "XXXX", line 5
    vc = zeros(,dtype=int)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:08:03) 
-- CODE:
from numpy import *

pro = array(eval(input("gols pro :")))
contra = array(eval(input("gols contra:")
vc = zeros(3,dtype=int)
for i in range(0,size(pro)):
    if(pro[i]>contra[i]):
       vc[0]=vc[0]+1
    if(pro[i]==contra[i]):
       vc[1]=vc[1]+1
    if(pro[i]<contra[i]):
       vc[2]=vc[2]+1
print(zeros)
-- ERROR:
File "XXXX", line 5
    vc = zeros(3,dtype=int)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:08:51) 
-- CODE:
from numpy import *

pro = array(eval(input("gols pro :")))
contra = array(eval(input("gols contra:")
vc = zeros(3 , dtype=int)
for i in range(0,size(pro)):
    if(pro[i]>contra[i]):
       vc[0]=vc[0]+1
    if(pro[i]==contra[i]):
       vc[1]=vc[1]+1
    if(pro[i]<contra[i]):
       vc[2]=vc[2]+1
print(zeros)
-- ERROR:
File "XXXX", line 5
    vc = zeros(3 , dtype=int)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:10:05) 
-- CODE:
from numpy import *

pro = array(eval(input("gols pro :")))
contra = array(eval(input("gols contra:")
vc = zeros(3,dtype=int)
for i in range(0,size(pro)):
    if(pro[i]>contra[i]):
       vc[0]=vc[0]+1
    if(pro[i]==contra[i]):
       vc[1]=vc[1]+1
    if(pro[i]<contra[i]):
       vc[2]=vc[2]+1
print(zeros)
-- ERROR:
File "XXXX", line 5
    vc = zeros(3,dtype=int)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:10:50) 
-- CODE:
from numpy import *

pro = array(eval(input("gols pro :")))
contra = array(eval(input("gols contra:")
vc = zeros(3,dtype=int)
for i in range(0,size(pro)):
    if(pro[i]>contra[i]):
       vc[0]=vc[0]+1
    if(pro[i]==contra[i]):
       vc[1]=vc[1]+1
    if(pro[i]<contra[i]):
       vc[2]=vc[2]+1
print(zeros)
-- EXECUTION TIME:
0.67229
-- ERROR:
  File "/home/codebench/codes/1807/2564/main.py", line 5
    vc = zeros(3,dtype=int)
     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:10:52) 
-- CODE:
from numpy import *

pro = array(eval(input("gols pro :")))
contra = array(eval(input("gols contra:")
vc = zeros(3,dtype=int)
for i in range(0,size(pro)):
    if(pro[i]>contra[i]):
       vc[0]=vc[0]+1
    if(pro[i]==contra[i]):
       vc[1]=vc[1]+1
    if(pro[i]<contra[i]):
       vc[2]=vc[2]+1
print(zeros)
-- ERROR:
File "XXXX", line 5
    vc = zeros(3,dtype=int)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:11:38) 
-- CODE:
from numpy import *

pro = array(eval(input("gols pro :")))
contra = array(eval(input("gols contra:")))
vc = zeros(3,dtype=int)
for i in range(0,size(pro)):
    if(pro[i]>contra[i]):
       vc[0]=vc[0]+1
    if(pro[i]==contra[i]):
       vc[1]=vc[1]+1
    if(pro[i]<contra[i]):
       vc[2]=vc[2]+1
print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:13:15) 
-- CODE:
from numpy import *

pro = array(eval(input("gols pro :")))
contra = array(eval(input("gols contra:")))
vc = zeros(3,dtype=int)
for i in range(0,size(pro)):
    if(pro[i]>contra[i]):
        vc[0]=vc[0]+1
    elif(pro[i]==contra[i]):
        vc[1]=vc[1]+1
    elif(pro[i]<contra[i]):
        vc[2]=vc[2]+1
print(zeros)
-- EXECUTION TIME:
0.865205
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
<built-in function zeros>
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
<built-in function zeros>
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
<built-in function zeros>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:13:16) 
-- CODE:
from numpy import *

pro = array(eval(input("gols pro :")))
contra = array(eval(input("gols contra:")))
vc = zeros(3,dtype=int)
for i in range(0,size(pro)):
    if(pro[i]>contra[i]):
        vc[0]=vc[0]+1
    elif(pro[i]==contra[i]):
        vc[1]=vc[1]+1
    elif(pro[i]<contra[i]):
        vc[2]=vc[2]+1
print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:14:22) 
-- CODE:
from numpy import *

pro = array(eval(input("gols pro :")))
contra = array(eval(input("gols contra:")))
vc = zeros(3,dtype=int)
for i in range(0,size(pro)):
    if(pro[i]>contra[i]):
      vc[0]=vc[0]+1
    elif(pro[i]==contra[i]):
      vc[1]=vc[1]+1
    elif(pro[i]<contra[i]):
      vc[2]=vc[2]+1
print(zeros)
-- EXECUTION TIME:
1.02172
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
<built-in function zeros>
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
<built-in function zeros>
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
<built-in function zeros>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:14:31) 
-- CODE:
from numpy import *

pro = array(eval(input("gols pro :")))
contra = array(eval(input("gols contra:")))
vc = zeros(3,dtype=int)
for i in range(0,size(pro)):
    if(pro[i]>contra[i]):
      vc[0]=vc[0]+1
    if(pro[i]==contra[i]):
      vc[1]=vc[1]+1
    if(pro[i]<contra[i]):
      vc[2]=vc[2]+1
print(zeros)
-- EXECUTION TIME:
1.10773
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
<built-in function zeros>
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
gols pro :gols contra:<built-in function zeros>
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
gols pro :gols contra:<built-in function zeros>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:14:37) 
-- CODE:
from numpy import *

pro = array(eval(input("gols pro :")))
contra = array(eval(input("gols contra:")))
vc = zeros(3,dtype=int)
for i in range(0,size(pro)):
    if(pro[i]>contra[i]):
      vc[0]=vc[0]+1
    if(pro[i]==contra[i]):
      vc[1]=vc[1]+1
    if(pro[i]<contra[i]):
      vc[2]=vc[2]+1
print(zeros)
-- EXECUTION TIME:
1.21468
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
<built-in function zeros>
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
<built-in function zeros>
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
<built-in function zeros>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:14:38) 
-- CODE:
from numpy import *

pro = array(eval(input("gols pro :")))
contra = array(eval(input("gols contra:")))
vc = zeros(3,dtype=int)
for i in range(0,size(pro)):
    if(pro[i]>contra[i]):
      vc[0]=vc[0]+1
    if(pro[i]==contra[i]):
      vc[1]=vc[1]+1
    if(pro[i]<contra[i]):
      vc[2]=vc[2]+1
print(zeros)
-- EXECUTION TIME:
2.58881
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
<built-in function zeros>
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
<built-in function zeros>
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
<built-in function zeros>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:15:01) 
-- CODE:
from numpy import *

pro = array(eval(input("gols pro :")))
contra = array(eval(input("gols contra:")))
vc = zeros(3,dtype=int)
for i in range(0,size(pro)):
    if(pro[i]>contra[i]):
      vc[0]=vc[0]+1
    if(pro[i]==contra[i]):
      vc[1]=vc[1]+1
    if(pro[i]<contra[i]):
      vc[2]=vc[2]+1
print(zeros)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:16:00) 
-- CODE:
from numpy import *

pro = array(eval(input("gols pro :")))
contra = array(eval(input("gols contra:")))
vc = zeros(3,dtype=int)
for i in range(0,size(pro)):
    if(pro[i]>contra[i]):
      vc[0]=vc[0]+1
    if(pro[i]==contra[i]):
      vc[1]=vc[1]+1
    if(pro[i]<contra[i]):
      vc[2]=vc[2]+1
print(vc)
-- EXECUTION TIME:
0.991086
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
gols pro :gols contra:[12  1  0]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:16:03) 
-- CODE:
from numpy import *

pro = array(eval(input("gols pro :")))
contra = array(eval(input("gols contra:")))
vc = zeros(3,dtype=int)
for i in range(0,size(pro)):
    if(pro[i]>contra[i]):
      vc[0]=vc[0]+1
    if(pro[i]==contra[i]):
      vc[1]=vc[1]+1
    if(pro[i]<contra[i]):
      vc[2]=vc[2]+1
print(vc)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:16:30) 
-- CODE:
from numpy import *

pro = array(eval(input("gols pro :")))
contra = array(eval(input("gols contra:")))
vc = zeros(3,dtype=int)
for i in range(0,size(pro)):
    if(pro[i]>contra[i]):
      vc[0]=vc[0]+1
    if(pro[i]==contra[i]):
      vc[1]=vc[1]+1
    if(pro[i]<contra[i]):
      vc[2]=vc[2]+1
print(vc)
-- EXECUTION TIME:
1.202
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
